<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group
        android:checkableBehavior="none"
        android:menuCategory="system"
        android:orderInCategory="0">
        <item
            android:id="@+id/Nav_Company"
            android:checkable="false"
            android:enabled="false"
            android:orderInCategory="2"
            android:title="@string/nav_company" />
        <item
            android:id="@+id/nav_department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="false"
            android:checked="true"
            android:enabled="true"
            android:icon="@drawable/ic_domain_black_24dp"
            android:menuCategory="container"
            android:orderInCategory="1"
            android:title="@string/department"
            android:tooltipText="@string/app_name"
            android:visible="true"
            tools:targetApi="o" />
    </group>

</menu>
